<resources>
    <string name="app_name">One-Omang</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_text">Test</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sim">SIM</string>
    <string name="click_here_to_scan">Click here to scan</string>
    <string name="register">Register</string>
    <string name="register_this_device">Register this device</string>
    <string name="scan_barcode_error_message">Scan barcode of the IMEI and SIM to register this device.</string>
    <string name="scan_barcode_user_assign_error_message">Scan barcode of the User id to assign user.</string>
    <string name="scan_password_error_message">Password is empty.</string>
    <string name="imei">IMEI</string>
    <string name="whats_new_ver">Whats new in this version</string>
    <string name="update_before">Update before </string>
    <string name="skip">Skip</string>
    <string name="update_now">Update Now</string>
    <string name="downloading">Downloading…</string>
    <string name="cbt_caption">\" It is not just about technology, it’s about sharing knowledge and resources, communicating efficiently, building learning communities and developing a culture of professionalism that you should be more keen about as students. We are so happy and proud to be part of your happiness \" </string>
    <string name="cbt_position">CEO, Cubet</string>
    <string name="cbt_name">Lovegin John</string>
    <string name="text_colon">:</string>
    <string name="accession_no">Accession No</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address:</string>
    <string name="school">School</string>
    <string name="gender">Gender</string>
    <string name="registered_on">Registered On</string>
    <string name="enrolled_subject">Enrolled Subject</string>
    <string name="test_attempted">Test Attempted</string>
    <string name="test_passed">Test Passed</string>
    <string name="total_time_taken">Total Time Taken</string>
    <string name="survey_attempted">Survey Attempted</string>
    <string name="download_success">Download completed successfully</string>
    <string name="download_error">Download Failed: Please try again later</string>
    <string name="brightness">Brightness</string>
    <string name="permission_denied">Permission Request denied</string>
    <string name="no_internet">Internet connectivity lost. Please check your network connection and try again</string>
    <string name="timeout_exception">Unable to connect with server due to issue in your network. Please try again later</string>
    <string name="no_internet_text">No internet connection</string>
    <string name="expired">Expired</string>
    <string name="new_test">New</string>
    <string name="release_date">Release Date</string>
    <string name="attempted">Attempted</string>
    <string name="no_new_test">No Test Available</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="search_by_name">Search By Name</string>
    <string name="subject">Subject</string>
    <string name="instruction">Instruction</string>
    <string name="no_expired_test">No test expired\n</string>
    <string name="correct">Correct</string>
    <string name="attempted_q">Attempted Q.</string>
    <string name="total_q">Total Q.</string>
    <string name="obtained_percent">Obtained % </string>
    <string name="clock">Clock</string>
    <string name="wrong">Wrong</string>
    <string name="level">level</string>
    <string name="title_survey">Survey</string>
    <string name="title_test">Test</string>
    <string name="title_tests">Tests</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_chat">Chat</string>
    <string name="no_test_attempted">No test attempted</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="more_test">More Test</string>
    <string name="exit">Exit</string>
    <string name="congratulation">Congratulations!</string>
    <string name="failed">Oh, sorry. You were unable to make it. Better luck next time</string>
    <string name="test_time">Test Time</string>
    <string name="you_have_successfully_completed_your_test">You have successfully completed your test</string>
    <string name="test_summary">Test Summary:</string>
    <string name="my_subjects">MY SUBJECTS</string>
    <string name="web_platforms">WEB PLATFORMS</string>
    <string name="my_library">MY LIBRARY</string>
    <string name="my_web_platforms">MY WEB-PLATFORMS</string>
    <string name="dept_education">DEPARTMENT OF EDUCATION</string>
    <string name="my_gallery">MY GALLERY</string>
    <string name="choose_one_option_from_below">Choose one option from below</string>
    <string name="your_answer">Your Answer</string>
    <string name="not_attempted">Not Attempted</string>
    <string name="q">Q.</string>
    <string name="enter_password">Enter Registration Password</string>
    <string name="enter_secret">Enter Secret Key</string>
    <string name="user_registration">User Assign</string>
    <string name="assign">Assign</string>
    <string name="video_saved_message">Video is saved successfully</string>
    <string name="image_saved_message">Image is saved successfully</string>
    <string name="title_photos">Photos</string>
    <string name="title_videos">Videos</string>
    <string name="title_docs">Docs</string>
    <string name="search_gallery">Search by name or description</string>
    <string name="no_content">No Contents available</string>
    <string name="no_test">Test not available</string>
    <string name="camera">Camera</string>
    <string name="my_classroom">My Classroom</string>
    <string name="my_classroom_title">Classrooms / Clubs</string>
    <string name="new_updates_available">New updates available</string>
    <string name="explore">EXPLORE</string>
    <string name="delete_success">Files Deleted Successfully</string>
    <string name="delete_confirmation_message">Are you sure to delete the selected files ?</string>
    <string name="new_update">New updates available</string>
    <string name="last_updated">Last synced on\n%s</string>
    <string name="my_club">My Clubs</string>
    <string name="my_club_title">My Club</string>
    <string name="no_books">%d books</string>
    <string name="no_videos">%d videos</string>
    <string name="no_lessons">%d lessons</string>
    <string name="percentage">%d %%</string>
    <string name="percentage_float">%f %%</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.\nIf the problem persists, please contact Aunty A</string>
    <string name="new_version">v%s</string>
    <string name="user_assigned_successfully">User Assigned Successfully</string>
    <string name="check_update">Checking for updates…</string>
    <string name="force_update_warning">This is a force update, users are required to install immediately</string>
    <string name="take_test">Take test</string>
    <string name="rate">Rate</string>
    <string name="clear_all">Clear All</string>
    <string name="web_links">Weblinks</string>
    <string name="download">Download</string>
    <string name="no_updates">Your app is up-to-date</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="unit_name">Unit name</string>
    <string name="objectives">Objectives : </string>
    <string name="no_lessons_available">No lessons available</string>
    <string name="lessons">Lessons</string>
    <string name="docs_amp_videos"><![CDATA[Docs & Videos]]></string>
    <string name="platforms">Platforms</string>
    <string name="live_classrooms">Live classRooms</string>
    <string name="chat">Chat</string>
    <string name="videos">Videos</string>
    <string name="docs">Docs</string>
    <string name="time">Time</string>
    <string name="wifi_timeout_message">Are you sure, you still want to continue with wifi configuration?\n</string>
    <string name="device_lock">Device Locked</string>
    <string name="unassign_user">Device Unassigned</string>
    <string name="user_locked"> user has been disabled</string>
    <string name="unassign_description">This device with device id %s is unassigned</string>
    <string name="device_lock_message">Your device has been locked. Please contact your Technical Support team: T| 083 787 4510 E| odineducationsupport@jendamark.com </string>
    <string name="title_all">All</string>
    <string name="title_my_favourites">My Favourites</string>
    <string name="pdf_goto">Go to Page</string>
    <string name="pagenumber">Enter page no.</string>
    <string name="get_latest_updates">Get latest updates</string>
    <string name="attempted_tests">Attempted\ntests</string>
    <string name="learner_average">Learner\nAverage</string>
    <string name="file_loading_error">There is an error while loading file</string>
    <string name="loading_inprogress">Loading file. Please wait…</string>
    <string name="downloading_status">Download in progress. %d %%</string>
    <string name="download_completed_count">(%d/%d downloaded)</string>
    <string name="are_you_sure_you_want_to_continue">Are you sure you want to continue?</string>
    <string name="confirm">Confirm</string>
    <string name="you_almost_done">You almost done!</string>
    <string name="no_questions">%d Questions</string>
    <string name="notification">Notifications</string>
    <string name="image_upload">Image Upload</string>
    <string name="tech_support">Tech-Support</string>
    <string name="test">Assessment</string>
    <string name="test_unit_title">Assessment</string>
    <string name="report_issue">Report Issue:</string>
    <string name="close">CLOSE</string>
    <string name="no_contents_available">Sorry, No contents available!</string>
    <string name="available_mon_friday_7_00am_10_00_pm_sat_9_00am_12_00pm_sunday_and_holidays_are_not_available">Operating hours:\n07:00 - 22:00 Monday to Friday\n09:00 - 12:00 Saturdays\nClosed on Sundays and public holidays</string>
    <string name="please_rate">Please Rate the Service</string>
    <string name="comments_optional">Comments(Optional)</string>
    <string name="enter_here">Enter here</string>
    <string name="please_enter_email">Please enter an email address</string>
    <string name="cell_phone_number">Cellphone number:</string>
    <string name="please_enter_cell_phone_number">Please enter a phone number</string>
    <string name="upload_image">Upload Image:</string>
    <string name="upload">Upload </string>
    <string name="tech_support_description_hint">Please describe the issue/ request/ suggestion in as much detail as possible. </string>
    <string name="reopen"> | Reopen on : %s</string>
    <string name="test_time_completed">Times Up!</string>
    <string name="test_submit_request">Test time has been completed. Please submit your answers.</string>
    <string name="title_feeds">Feeds</string>
    <string name="updates_available"><u> NEW UPDATES AVAILABLE!! </u></string>
    <string name="no_classroom_data">Classroom/Club details not available</string>
</resources>